styles: 更新文件结构
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 
     <title>TpOut's site</title>
 
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="styles/index-main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 </head>
 
@@ -36,9 +36,10 @@
     </footer>
 
     <script src="./scripts/native-ajax.js"></script>
-    <script src="./scripts/api.js"></script>
+    <script src="scripts/detail-content.js"></script>
 
-    <script src="./scripts/ball.js"></script>
+    <script src="./scripts/ball.js"></script>.
+    <script src="./scripts/config.js"></script>
     <script src="./scripts/mainlist.js"></script>
 
 </body>
