--- a/web/detail-container.html
+++ b/web/detail-container.html
@@ -4,41 +4,18 @@
     <meta charset="UTF-8">
     <meta name="author" content="TpOut">
     <title>文章名</title>
-    <style>
-        #content{
-
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/detail-container.css">
 </head>
 <body>
-<article id="content"></article>
+<header>
+    <h1 id="title"></h1>
+</header>
+<main>
+    <article id="content"></article>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="./scripts/native-ajax.js"></script>
-<script>
-    function getRequest() {
-        var url = location.search; //获取url中"?"符后的字串
-        var theRequest = "";
-        if (url.indexOf("?") != -1) {
-            var str = url.substr(1);
-            var strs = str.split("&");
-            for(var i = 0; i < strs.length; i ++) {
-                //现在只有一个参数
-                if(i === 0){
-                    theRequest = decodeURI(strs[i].split("=")[1])
-                }
-            }
-        }
-        return theRequest;
-    }
-
-    Ajax.get("http://localhost:8080/"+ getRequest(), function (res) {
-        try {
-            document.getElementById('content').innerHTML = marked(res);
-        } catch(err) {
-
-        }
-    })
-
-</script>
+<script src="./scripts/config.js"></script>
+<script src="./scripts/detail-content.js"></script>
 </body>
 </html>
