feat: add header nav and prepare for body struct change
Signed-off-by: 416756910@qq.com <416756910@qq.com>

--- a/web/detail-container.html
+++ b/web/detail-container.html
@@ -14,8 +14,8 @@
     <article id="content"></article>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<script src="./scripts/native-ajax.js"></script>
+<script src="scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
-<script src="./scripts/detail-content.js"></script>
+<script src="scripts/detail/detail-content.js"></script>
 </body>
 </html>
