--- a/web/index.html
+++ b/web/index.html
@@ -79,6 +79,7 @@
 <script src="./scripts/index/list-logic.js"></script>
 <script src="./scripts/index/article-list.js"></script>
 <script src="./scripts/index/essay-list.js"></script>
+<script src="./scripts/index/access.js"></script>
 
 </body>
 
