--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
                         <li><a href="#"></a>主线</li>
                         <li><a href="#"></a>图册</li>
                         <li><a href="./android_book/index.html">博客</a></li>
-                        <li><a href="#"></a>随笔</li>
+                        <li><a href="./interact-with-android.html">随笔</a></li>
                     </ul>
                 </nav>
             </div>
