--- a/web/index.html
+++ b/web/index.html
@@ -12,26 +12,18 @@
 </head>
 
 <body>
-<div id="exclude_footer">
     <header>
         <div id="top_content">
-            <picture id="top_avatar">
-                <source media="(max-width: 799px)" srcset="">
-                <source media="(min-width: 800px)" srcset="">
-                <img src="/imgs/author_avatar.png" alt="Author's avatar">
-            </picture>
-            <div id="top_description">
-                <h1>TpOut的博客</h1>
-
-                <nav>
-                    <ul>
-                        <li><a href="#"></a>主线</li>
-                        <li><a href="#"></a>图册</li>
-                        <li><a href="./android_book/index.html">博客</a></li>
-                        <li><a href="./interact-with-android.html">随笔</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <img id="top_avatar" src="/imgs/author_avatar.png" alt="Author's avatar">TpOut</img>
+            <nav>
+                <ul>
+                    <li><a href="#"></a>首页</li>
+                    <li><a href="#"></a>主线</li>
+                    <li><a href="#"></a>图册</li>
+                    <li><a href="./android_book/index.html">博客</a></li>
+                    <li><a href="./interact-with-android.html">随笔</a></li>
+                </ul>
+            </nav>
         </div>
         <canvas id="top_bg"></canvas>
     </header>
@@ -59,19 +51,12 @@
         </ul>
     </main>
 
-    <aside>
-
-    </aside>
-</div>
-
 <footer>
     <p>
         如有建议，敬请联系：416756910@qq.com<br>
         由于能力有限，本网站只经过个人使用的chrome测试，并且短期内不准备处理兼容问题
     </p>
 </footer>
-
-<script src="./scripts/index/ball.js"></script>
 
 <script src="./scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
