--- a/web/index.html
+++ b/web/index.html
@@ -28,28 +28,103 @@
             </ul>
         </nav>
     </div>
-    <canvas id="top_bg"></canvas>
 </header>
 
 <main>
     <div id="title">
-        <p id="title_bg">PERSONAL SITE</p>
+        <p id="title_bg">TPOUT'S BLOG</p>
         <p id="title_fg">Welcome</p>
     </div>
 
     <div id="main_data">
-        <!--考虑以后用js填充，目前就先写死吧-->
+        <!--考虑以后动态填充，目前就先写死吧-->
         <section>
             <div>
-                <img class="section_img" src="/imgs">
+                <img class="section_img" src="/imgs/icons/ic_android.png">
                 <p class="section_title">Android</p>
             </div>
             <ul>
                 <li>
-                    <p class="article_title">启动</p>
+                    <p class="article_title">Android Studio Summary</p>
                     <time class="article_time">1997.07.07</time>
                 </li>
             </ul>
+        </section>
+        <section>
+            <div>
+                <img class="section_img" src="/imgs/icons/ic_code.png">
+                <p class="section_title">Code</p>
+            </div>
+            <ul>
+                <li>
+                    <p class="article_title">UCP原理</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+                <li>
+                    <p class="article_title">布莱叶盲文</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+                <li>
+                    <p class="article_title">摩尔斯电码</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div>
+                <img class="section_img" src="/imgs/icons/ic_food.png">
+                <p class="section_title">食锦记</p>
+            </div>
+            <ul>
+                <li>
+                    <p class="article_title">炸鸡腿</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div>
+                <img class="section_img" src="/imgs/icons/ic_feel.png">
+                <p class="section_title">心晴</p>
+            </div>
+            <ul>
+                <li>
+                    <p class="article_title">师傅问我这么大雪，在外面看啥？</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div>
+                <img class="section_img" src="/imgs/icons/ic_story.png">
+                <p class="section_title">yi事</p>
+            </div>
+            <ul>
+                <li>
+                    <p class="article_title">牛郎织女的故事</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+                <li>
+                    <p class="article_title">年兽传说</p>
+                    <time class="article_time">1997.07.07</time>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div>
+                <img class="section_img" src="/imgs/icons/ic_pic.png">
+                <p class="section_title">图册</p>
+            </div>
+            <div id="img">
+                <figure>
+                    <img class="img_img" alt="painter" src="imgs/album/header.jpg">
+                    <figcaption>bloger's self painter: header</figcaption>
+                </figure>
+                <figure>
+                    <img class="img_img" alt="painter" src="imgs/album/domo.jpg">
+                    <figcaption>bloger's self painter : domo</figcaption>
+                </figure>
+            </div>
         </section>
     </div>
 
