feat: 基本结构。后续添加文章
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -19,12 +19,10 @@
         <nav id="top_nav">
             <ul>
                 <li><a href="#"></a>首页</li>
-                <li><a href="./android_book/index.html"></a>主线</li>
+                <li>主线</li>
                 <li><a href="#"></a>图册</li>
-                <li><a href="">博客</a></li>
-                <a href="./interact-with-android.html">
-                    <li>随笔</li>
-                </a>
+                <li>博客</li>
+                <li>随笔</li>
             </ul>
         </nav>
     </div>
@@ -44,29 +42,40 @@
                 <p class="section_title">Android</p>
             </div>
             <ul>
+                <a href="./android_book/index.html">
+                    <li>
+                        <p class="article_title">Android Studio Summary</p>
+                        <time class="article_time">2019.01.03</time>
+                    </li>
+                </a>
                 <li>
-                    <p class="article_title">Android Studio Summary</p>
-                    <time class="article_time">1997.07.07</time>
+                    <p class="article_title">Android艺术开发探索 Summary</p>
                 </li>
             </ul>
         </section>
         <section>
             <div>
                 <img class="section_img" src="/imgs/icons/ic_code.png">
-                <p class="section_title">Code</p>
+                <p class="section_title">CS Books</p>
             </div>
             <ul>
                 <li>
-                    <p class="article_title">UCP原理</p>
-                    <time class="article_time">1997.07.07</time>
+                    <p class="article_title">Code</p>
+                    <time class="article_time">2019.03.30</time>
+                </li>
+                <a href="https://tpout.gitbook.io/workspace/">
+                    <li>
+                        <p class="article_title">Language</p>
+                        <time class="article_time">2019.05.05</time>
+                    </li>
+                </a>
+                <li>
+                    <p class="article_title">人月神话</p>
+                    <time class="article_time">2019.04.04</time>
                 </li>
                 <li>
-                    <p class="article_title">布莱叶盲文</p>
-                    <time class="article_time">1997.07.07</time>
-                </li>
-                <li>
-                    <p class="article_title">摩尔斯电码</p>
-                    <time class="article_time">1997.07.07</time>
+                    <p class="article_title">重构</p>
+                    <time class="article_time">2019.06.06</time>
                 </li>
             </ul>
         </section>
@@ -76,10 +85,12 @@
                 <p class="section_title">食锦记</p>
             </div>
             <ul>
-                <li>
-                    <p class="article_title">炸鸡腿</p>
-                    <time class="article_time">1997.07.07</time>
-                </li>
+                <a href="/food_book/炸鸡腿.html">
+                    <li>
+                        <p class="article_title">炸鸡腿</p>
+                        <time class="article_time">2018.10.06</time>
+                    </li>
+                </a>
             </ul>
         </section>
         <section>
@@ -97,7 +108,7 @@
         <section>
             <div>
                 <img class="section_img" src="/imgs/icons/ic_story.png">
-                <p class="section_title">yi事</p>
+                <p class="section_title">轶事</p>
             </div>
             <ul>
                 <li>
@@ -117,12 +128,10 @@
             </div>
             <div id="img">
                 <figure>
-                    <img class="img_img" alt="painter" src="imgs/album/header.jpg">
-                    <figcaption>bloger's self painter: header</figcaption>
+                    <img class="img_img" alt="painter" src="imgs/album/girl.jpg">
                 </figure>
                 <figure>
                     <img class="img_img" alt="painter" src="imgs/album/domo.jpg">
-                    <figcaption>bloger's self painter : domo</figcaption>
                 </figure>
             </div>
         </section>
