fix: 读取本地文件 更新
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -79,18 +79,12 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="food">
             <div>
                 <img class="section_img" src="/imgs/icons/ic_food.png">
                 <p class="section_title">食锦记</p>
             </div>
             <ul>
-                <a href="/food_book/炸鸡腿.html">
-                    <li>
-                        <p class="article_title">炸鸡腿</p>
-                        <time class="article_time">2018.10.06</time>
-                    </li>
-                </a>
             </ul>
         </section>
         <section>
@@ -143,9 +137,7 @@
 <script src="./scripts/config.js"></script>
 <!--这里还不知道怎么合适的处理命名冲突问题，所以先抽一个js 出来-->
 <script src="./scripts/index/list-logic.js"></script>
-<script src="./scripts/index/article-list.js"></script>
-<script src="./scripts/index/essay-list.js"></script>
-<script src="./scripts/index/access.js"></script>
+<script src="./scripts/index/food-list.js"></script>
 
 </body>
 
