--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <title>TpOut's site</title>
 
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/tag.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 </head>
 
