feat: æ¦è¦åè¡¨é¡µåºæ¬å¸å±
Signed-off-by: tpout <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="TpOut">
 
     <title>TpOut's site</title>
-
+    <link rel="stylesheet" href="styles/common-body-header-main.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/tag.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
@@ -22,7 +22,7 @@
                 <li><a href="#"></a>首页</li>
                 <li>主线</li>
                 <li><a href="#"></a>图册</li>
-                <li>博客</li>
+                <li><a href="summary-list.html?category=blog">博客</a></li>
                 <li>随笔</li>
             </ul>
         </nav>
