--- a/web/summary-list.html
+++ b/web/summary-list.html
@@ -5,6 +5,7 @@
     <title>TpOut's site</title>
     <link rel="stylesheet" href="styles/common-body-header-main.css">
     <link rel="stylesheet" href="styles/summary-list.css">
+    <link rel="stylesheet" href="styles/tag.css">
 </head>
 <body>
 <header>
@@ -24,31 +25,11 @@
 </header>
 <main>
     <div>
-        <figure>
-            <img id="header_img" alt="category_icon" src="">
-        </figure>
+        <!--<figure> figure会增加底部空间-->
+        <img id="header_img" alt="category_icon" src="">
+        <!--</figure>-->
         <p id="header_title"></p>
     </div>
-    <section>
-        <p class="section_title">CS Books</p>
-        <p class="section_describe">Language</p>
-        <time class="section_time">2019.05.05</time>
-    </section>
-    <section>
-        <p class="section_title">CS Books</p>
-        <p class="section_describe">Language</p>
-        <time class="section_time">2019.05.05</time>
-    </section>
-    <section>
-        <p class="section_title">CS Books</p>
-        <p class="section_describe">Language</p>
-        <time class="section_time">2019.05.05</time>
-    </section>
-    <section>
-        <p class="section_title">CS Books</p>
-        <p class="section_describe">Language</p>
-        <time class="section_time">2019.05.05</time>
-    </section>
 </main>
 
 <script src="./scripts/net/native-ajax.js"></script>
