feat: block by html display string contains \n
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/summary-list.html
+++ b/web/summary-list.html
@@ -33,7 +33,9 @@
 </main>
 
 <script src="./scripts/net/native-ajax.js"></script>
+<script src="./scripts/config.js"></script>
 <script src="./scripts/net/get-params.js"></script>
+<script src="./scripts/summary/list-logic.js"></script>
 <script src="./scripts/summary/summary.js"></script>
 
 </body>
