feat: èè®¿é®æ°éï¼èç³»æ¹å¼
Signed-off-by: tpout <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -116,6 +116,8 @@
 
 <script src="./scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
+<script src="./scripts/index/access.js"></script>
+<script src="./scripts/index/top-bar.js"></script>
 <!--这里还不知道怎么合适的处理命名冲突问题，所以先抽一个js 出来-->
 <script src="./scripts/index/list-logic.js"></script>
 <script src="./scripts/index/food-list.js"></script>
