--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,8 @@
 <body>
 <header>
     <div id="top_content">
-        <img id="top_avatar" src="/imgs/author_avatar.png" alt="Author's avatar">
+        <!-- Mac电脑，src属性相对路经一定要写 . -->
+        <img id="top_avatar" src="./imgs/author_avatar.png" alt="Author's avatar">
         <p id="top_name">TpOut</p>
         <nav id="top_nav">
             <ul>
@@ -39,7 +40,7 @@
         <!--考虑以后动态填充，目前就先写死吧-->
         <section>
             <div>
-                <img class="section_img" src="/imgs/icons/ic_android.png">
+                <img class="section_img" src="./imgs/icons/ic_android.png">
                 <p class="section_title">Android</p>
             </div>
             <ul>
@@ -56,7 +57,7 @@
         </section>
         <section>
             <div>
-                <img class="section_img" src="/imgs/icons/ic_code.png">
+                <img class="section_img" src="./imgs/icons/ic_code.png">
                 <p class="section_title">CS Books</p>
             </div>
             <ul>
@@ -74,7 +75,7 @@
         </section>
         <section id="food">
             <div>
-                <img class="section_img" src="/imgs/icons/ic_food.png">
+                <img class="section_img" src="./imgs/icons/ic_food.png">
                 <p class="section_title">食锦记</p>
             </div>
             <ul>
@@ -82,7 +83,7 @@
         </section>
         <section id="feel">
             <div>
-                <img class="section_img" src="/imgs/icons/ic_feel.png">
+                <img class="section_img" src="./imgs/icons/ic_feel.png">
                 <p class="section_title">心晴</p>
             </div>
             <ul>
@@ -90,7 +91,7 @@
         </section>
         <section id="story">
             <div>
-                <img class="section_img" src="/imgs/icons/ic_story.png">
+                <img class="section_img" src="./imgs/icons/ic_story.png">
                 <p class="section_title">轶事</p>
             </div>
             <ul>
@@ -98,15 +99,15 @@
         </section>
         <section>
             <div>
-                <img class="section_img" src="/imgs/icons/ic_pic.png">
+                <img class="section_img" src="./imgs/icons/ic_pic.png">
                 <p class="section_title">图册</p>
             </div>
             <div id="img">
                 <figure>
-                    <img class="img_img" alt="painter" src="imgs/album/girl.jpg">
+                    <img class="img_img" alt="painter" src="./imgs/album/girl.jpg">
                 </figure>
                 <figure>
-                    <img class="img_img" alt="painter" src="imgs/album/domo.jpg">
+                    <img class="img_img" alt="painter" src="./imgs/album/domo.jpg">
                 </figure>
             </div>
         </section>
