--- a/web/index.html
+++ b/web/index.html
@@ -22,9 +22,8 @@
             <ul>
                 <li><a href="#"></a>首页</li>
                 <li>主线</li>
-                <li><a href="#"></a>图册</li>
                 <li><a href="summary-list.html?category=blog">博客</a></li>
-                <li>随笔</li>
+                <li><a href="summary-list.html?category=novel">刀绅</a></li>
             </ul>
         </nav>
     </div>
