--- a/web/detail-container.html
+++ b/web/detail-container.html
@@ -5,6 +5,7 @@
     <meta name="author" content="TpOut">
     <title>文章名</title>
     <link rel="stylesheet" href="styles/font.css">
+    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -18,6 +19,7 @@
     </article>
 
 </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
