文件夹展示逻辑
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -116,7 +116,7 @@
 <script src="./scripts/index/access.js"></script>
 <script src="./scripts/index/top-bar.js"></script>
 <!--这里还不知道怎么合适的处理命名冲突问题，所以先抽一个js 出来-->
-<script src="./scripts/index/list-logic.js"></script>
+<script src="scripts/index/index-list-logic.js"></script>
 <script src="./scripts/index/food-list.js"></script>
 <script src="./scripts/index/feel-list.js"></script>
 <script src="./scripts/index/story-list.js"></script>
