--- a/web/summary-list.html
+++ b/web/summary-list.html
@@ -35,7 +35,7 @@
 <script src="./scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
 <script src="./scripts/net/get-params.js"></script>
-<script src="./scripts/summary/list-logic.js"></script>
+<script src="scripts/summary/summary-list-logic.js"></script>
 <script src="./scripts/summary/summary.js"></script>
 
 </body>
