添加code 部分逻辑
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/summary-list.html
+++ b/web/summary-list.html
@@ -35,6 +35,7 @@
 <script src="./scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
 <script src="./scripts/net/get-params.js"></script>
+<script src="scripts/list-item.js"></script>
 <script src="scripts/summary/summary-list-logic.js"></script>
 <script src="./scripts/summary/summary.js"></script>
 
