--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
                 </a>
             </ul>
         </section>
-        <section>
+        <section id="cs_book">
             <div>
                 <img class="section_img" src="./imgs/icons/ic_code.png">
                 <p class="section_title">CS Books</p>
@@ -63,10 +63,6 @@
                         <time class="article_time">2019.05.05</time>
                     </li>
                 </a>
-                <li>
-                    <p class="article_title">Code</p>
-                    <time class="article_time">2019.04.04</time>
-                </li>
             </ul>
         </section>
         <section id="food">
@@ -116,7 +112,9 @@
 <script src="./scripts/index/access.js"></script>
 <script src="./scripts/index/top-bar.js"></script>
 <!--这里还不知道怎么合适的处理命名冲突问题，所以先抽一个js 出来-->
+<script src="scripts/list-item.js"></script>
 <script src="scripts/index/index-list-logic.js"></script>
+<script src="./scripts/index/cs-book-list.js"></script>
 <script src="./scripts/index/food-list.js"></script>
 <script src="./scripts/index/feel-list.js"></script>
 <script src="./scripts/index/story-list.js"></script>
