修改站点的展示。去除一些奇奇怪怪的\
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -57,12 +57,14 @@
                 <p class="section_title">CS Books</p>
             </div>
             <ul>
-                <a href="https://tpout.gitbook.io/workspace/">
-                    <li>
-                        <p class="article_title">Language</p>
-                        <time class="article_time">2019.05.05</time>
-                    </li>
-                </a>
+            </ul>
+        </section>
+        <section id="cs_language">
+            <div>
+                <img class="section_img" src="./imgs/icons/ic_code.png">
+                <p class="section_title">CS Language</p>
+            </div>
+            <ul>
             </ul>
         </section>
         <section id="food">
@@ -118,6 +120,7 @@
 <script src="./scripts/index/food-list.js"></script>
 <script src="./scripts/index/feel-list.js"></script>
 <script src="./scripts/index/story-list.js"></script>
+<script src="./scripts/index/cs-language-list.js"></script>
 
 </body>
 
