fix: marked ``块、>注释 没有渲染背景的问题
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/detail-container.html
+++ b/web/detail-container.html
@@ -5,7 +5,9 @@
     <meta name="author" content="TpOut">
     <title>文章名</title>
     <link rel="stylesheet" href="styles/font.css">
-    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">
+<!--    http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css-->
+    <link href="./styles/highlight.css" rel="stylesheet">
+    <link href="./styles/marked.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -19,8 +21,8 @@
     </article>
 
 </main>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="./scripts/detail/http_cdnjs.cloudflare.com_ajax_libs_highlight.js_9.15.10_highlight.min.js"></script>
+<script src="./scripts/detail/http_cdn.jsdelivr.net_npm_marked_marked.min.js"></script>
 <script src="scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
 <script src="scripts/detail/detail-content.js"></script>
