升级hightlight 以支持kotlin
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/detail-container.html
+++ b/web/detail-container.html
@@ -21,7 +21,8 @@
     </article>
 
 </main>
-<script src="./scripts/detail/http_cdnjs.cloudflare.com_ajax_libs_highlight.js_9.15.10_highlight.min.js"></script>
+<script src="./scripts/detail/__cdnjs.cloudflare.com_ajax_libs_highlight.js_10.1.2_highlight.min.js"></script>
+<script src="./scripts/detail/http_cdnjs.cloudflare.com_ajax_libs_highlight.js_10.1.2_languages_go.min.js"></script>
 <script src="./scripts/detail/http_cdn.jsdelivr.net_npm_marked_marked.min.js"></script>
 <script src="scripts/net/native-ajax.js"></script>
 <script src="./scripts/config.js"></script>
